--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test",
-  "homepage": "https://github.com/Icarus112233/Test1.git",
+  "homepage": "https://icarus112233.github.io/Test1/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
